# ImageFilters

./: README.md
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/in3110_assignment3.egg-info/: PKG-INFO  SOURCES.txt
assignment3/in3110_instapy/: cli.py  numpy_filters.py  python_filters.py  timing.py
assignment3/in3110_instapy.egg-info/: PKG-INFO  requires.txt
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
